tests/ui/ferrocene/compiler-arguments/upper_c_link-arg/upper_c_link-arg_empty.rs
//@ check-fail
//@ compile-flags: -C link-arg
//~? ERROR codegen option `link-arg` requires a string

fn main() {}

// ferrocene-annotations: um_rustc_C_link_arg
